# silvia-ai

./: .env.example  .eslintrc.cjs  .gitignore  README.md  RELEASING.md  Silvia AI.html  firestore.rules  index.html  package-lock.json  package.json  standalone.html  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
SilviaAI-iOS/: README.md
SilviaAI-iOS/SilviaAI.xcodeproj/: project.pbxproj
SilviaAI-iOS/SilviaAI/App/: SilviaAIApp.swift
SilviaAI-iOS/SilviaAI/Models/: AppSettings.swift  AuthUser.swift  ChatMessage.swift  ChatRole.swift
SilviaAI-iOS/SilviaAI/Resources/: Config.example.plist  Config.plist  Info.plist  (+1 more)
api/: desktop-auth-token.ts  live-token.ts
public/: manifest.webmanifest  privacy-policy.html
silvia-ai/: README.md
silvia-ai/chats/: chat1.md
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Aurora.tsx  AuthScreen.tsx  ChatHistorySheet.tsx  ChatView.tsx  Composer.tsx  DownloadPage.tsx  MarkdownContent.tsx  MessageItem.tsx  ModelSelector.tsx  SettingsSheet.tsx  Sidebar.tsx  SyncStatusChip.tsx  Toast.tsx  TopBar.tsx  VoiceMode.tsx  Welcome.tsx  icons.tsx
src/config/: models.ts  themes.ts  voices.ts
src/contexts/: AuthContext.tsx
src/hooks/: useChatSync.ts  useTheme.ts
src/lib/: audio.ts  chatMeta.ts  chatSync.ts  files.ts  firebase.ts  gemini.ts  liveVoice.ts  markdown.ts  routing.ts  storage.ts  utils.ts
src/pages/: DesktopAuth.tsx
src/styles/: global.css
(+21 files in other folders)
