[package]
name = "silvia-ai"
version = "1.0.0"
description = "Silvia AI — premium multi-model Gemini chat studio"
authors = ["kristylsilvia-bit"]
license = ""
repository = "https://github.com/kristylsilvia-bit/silvia-ai"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "silvia_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2" }
tauri-plugin-log = "2"
